tdf#100784 macOS: Don't attempt to handle shortcuts via the menubar

... when it's hidden.

Change-Id: I7930afb8124dd552843512cd30bce4d82ade0c70